Bug-fix width-overflow

--- a/src/components/Divider/Divider.css
+++ b/src/components/Divider/Divider.css
@@ -1,5 +1,4 @@
 .divider {
-  width: 100%;
   border-bottom: 2px solid black;
   margin-top: 1rem;
   margin-bottom: 2rem;
